# radix-app

./: .gitignore  README.md
docker/: .env  Dockerfile  DockerfileWeb  DockerfileWorker  docker-compose-full.yml  docker-compose-web.yml  docker-compose-worker.yml  docker-compose.yml  nginx.conf
web/: app.config.ts  drizzle.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
web/drizzle/migrations/: 0000_broken_sauron.sql  0000_funny_bullseye.sql  0000_glamorous_gabe_jones.sql  0000_hot_hammerhead.sql  0000_illegal_luckman.sql  0000_nifty_mockingbird.sql  0000_serious_guardsmen.sql  0000_steady_jack_flag.sql
web/drizzle/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
web/src/: app.css  app.tsx  entry-server.tsx  middleware.ts  types.d.ts
web/src/api/: index.ts  queries.ts  server.ts
web/src/db/: db.ts  dbTypes.ts  migrate.ts  operations.ts  schema.ts
web/src/lib/: SystemContext.ts  UserContext.ts  auth.ts  validators.ts
web/src/lib/db/: db.ts  (+5 more)
web/src/routes/: (protected).tsx  index.tsx  login.tsx  signup.tsx
worker/: Cargo.toml
worker/src/: error.rs  main.rs  models.rs
worker/src/db/: db.rs  mod.rs  model.rs  queries.rs
worker/src/executor/: executor.rs  job_output.rs  mod.rs  runner.rs  system_builder.rs
worker/src/executor/algorithm/: digits.rs  error.rs  functions.rs  lib.rs  math.rs  mod.rs  models.rs  norms.rs  operations.rs  systems.rs  systems_factories.rs
worker/src/executor/minio/: minio.rs
worker/src/minio/: minio.rs  mod.rs  storage.rs
worker/src/supervisor/: mod.rs  runner.rs  supervisor.rs
(+57 files in other folders)
