[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "thin"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
algebraeon = "0.0.16"
nalgebra = "0.34.1"
rayon = "1.11"
aws-sdk-s3 = "1.122.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
